# shreya-bot

./: README.md  main.py  memory.json  pyproject.toml  replit.md  requirements.txt
templates/: admin.html  index.html  login.html
